# AzurLaneDecTools

./: AssetDecoder.cpp  AssetDecoder.h  ByteCodeDec.cpp  ByteCodeDec.h  CMakeLists.txt  Makefile  README.md  build.bat  compat.c  defs.h  install_boost_1.69.0_vs2015.ps1  main.cpp  uabdec.cpp
src/: Makefile  compat.h  defs.h  lj_bcdump.h  lj_bcread.c  lj_load.c  msvcbuild.bat
